--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,3 +11,22 @@
   font-size: 16px;
   color: #333;
 }
+
+.ae-input {
+  border-radius: 10px;
+  flex: 1;
+  outline: none;
+  padding: 12px 16px;
+  margin: 16px 0;
+  border: 1px solid rgb(197, 197, 197);
+  transition: 0.6s;
+
+  &:focus {
+    border: 1px solid #0e82cf;
+  }
+  // @apply w-full rounded-md outline-none border py-3 my-4 px-4 focus:ring-2 focus:border-none ring-offset-2 ring-gray-500 duration-600;
+}
+
+.error-message {
+  color: #e20031;
+}
