--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,6 +27,19 @@
   // @apply w-full rounded-md outline-none border py-3 my-4 px-4 focus:ring-2 focus:border-none ring-offset-2 ring-gray-500 duration-600;
 }
 
+.ae-button {
+  background-color: #2980b9;
+  color: #fff;
+  padding: 8px 18px;
+  border: none;
+  border-radius: 6px;
+  transition: 0.6s;
+
+  &:hover {
+    background-color: #0164a7;
+  }
+}
+
 .error-message {
   color: #e20031;
 }
